// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Social Links Component does not render when items are empty 1`] = `
<div>
  


</div>
`;

exports[`Social Links Component renders with icon HTML 1`] = `
<div>
  

  
  <div
    class="ct-social-links ct-theme-light  "
  >
    

                            
      

  
    <ul
      class="ct-item-list ct-item-list--horizontal ct-item-list--regular  ct-social-links__list"
    >
      
                  
      <li
        class="ct-item-list__item"
      >
                  

  
        <a
          class="ct-button ct-theme-light ct-button--tertiary ct-button--link ct-button--regular   ct-social-links__button"
          data-component-name="button"
          href="https://facebook.com"
          role="button"
          target="_blank"
          title="Facebook"
        >
                    
          <svg />
          



        </a>
        
        
      </li>
      
                        
      <li
        class="ct-item-list__item"
      >
                  

  
        <a
          class="ct-button ct-theme-light ct-button--tertiary ct-button--link ct-button--regular   ct-social-links__button"
          data-component-name="button"
          href="https://twitter.com"
          role="button"
          target="_blank"
          title="Twitter"
        >
                    
          <svg />
          



        </a>
        
        
      </li>
      
            
    </ul>
    
    
  
  </div>
  

</div>
`;

exports[`Social Links Component renders with optional attributes 1`] = `
<div>
  

  
  <div
    class="ct-social-links ct-theme-dark ct-social-links--with-border custom-class"
    data-test="true"
  >
    

                            
      

  
    <ul
      class="ct-item-list ct-item-list--horizontal ct-item-list--regular  ct-social-links__list"
    >
      
                  
      <li
        class="ct-item-list__item"
      >
                  

  
        <a
          class="ct-button ct-theme-dark ct-button--tertiary ct-button--link ct-button--regular   ct-social-links__button"
          data-component-name="button"
          href="https://facebook.com"
          role="button"
          target="_blank"
          title="Facebook"
        >
                    
          <svg />
          



        </a>
        
        
      </li>
      
                        
      <li
        class="ct-item-list__item"
      >
                  

  
        <a
          class="ct-button ct-theme-dark ct-button--tertiary ct-button--link ct-button--regular   ct-social-links__button"
          data-component-name="button"
          href="https://twitter.com"
          role="button"
          target="_blank"
          title="Twitter"
        >
                    
          <svg />
          



        </a>
        
        
      </li>
      
            
    </ul>
    
    
  
  </div>
  

</div>
`;

exports[`Social Links Component renders with required attributes 1`] = `
<div>
  

  
  <div
    class="ct-social-links ct-theme-light  "
  >
    

                            
      

  
    <ul
      class="ct-item-list ct-item-list--horizontal ct-item-list--regular  ct-social-links__list"
    >
      
                  
      <li
        class="ct-item-list__item"
      >
                  

  
        <a
          class="ct-button ct-theme-light ct-button--tertiary ct-button--link ct-button--regular   ct-social-links__button"
          data-component-name="button"
          href="https://facebook.com"
          role="button"
          target="_blank"
          title="Facebook"
        >
                    


                                    
          <svg
            aria-hidden="true"
            class="ct-icon  ct-button__icon"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            

            <path
              d="M15.1204 5.32H17.0004V2.14C16.0901 2.04535 15.1755 1.99862 14.2604 2C11.5404 2 9.68035 3.66 9.68035 6.7V9.32H6.61035V12.88H9.68035V22H13.3604V12.88H16.4204L16.8804 9.32H13.3604V7.05C13.3604 6 13.6404 5.32 15.1204 5.32Z"
            />
            

          </svg>
          

  
        </a>
        
        
      </li>
      
                        
      <li
        class="ct-item-list__item"
      >
                  

  
        <a
          class="ct-button ct-theme-light ct-button--tertiary ct-button--link ct-button--regular   ct-social-links__button"
          data-component-name="button"
          href="https://twitter.com"
          role="button"
          target="_blank"
          title="Twitter"
        >
                    


                                    
          <svg
            aria-hidden="true"
            class="ct-icon  ct-button__icon"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            

            <path
              d="M22 5.8C21.2483 6.12609 20.4534 6.34166 19.64 6.44C20.4982 5.92732 21.1413 5.12078 21.45 4.17C20.6436 4.65006 19.7608 4.98829 18.84 5.17C18.2245 4.50257 17.405 4.05829 16.5098 3.90685C15.6147 3.7554 14.6945 3.90535 13.8938 4.33319C13.093 4.76102 12.4569 5.44253 12.0852 6.27083C11.7135 7.09914 11.6273 8.02739 11.84 8.91C10.2094 8.82752 8.61444 8.40295 7.15865 7.66386C5.70287 6.92477 4.41885 5.88769 3.39 4.62C3.02914 5.25016 2.83952 5.96382 2.84 6.69C2.83872 7.36438 3.00422 8.02861 3.32176 8.62356C3.63929 9.21851 4.09902 9.72571 4.66 10.1C4.00798 10.0823 3.36989 9.90729 2.8 9.59V9.64C2.80489 10.5849 3.13599 11.4991 3.73731 12.228C4.33864 12.9568 5.17326 13.4556 6.1 13.64C5.74326 13.7486 5.37287 13.8058 5 13.81C4.74189 13.807 4.48442 13.7836 4.23 13.74C4.49391 14.5528 5.00462 15.2631 5.69107 15.7722C6.37753 16.2812 7.20558 16.5635 8.06 16.58C6.6172 17.7153 4.83588 18.3349 3 18.34C2.66574 18.3411 2.33174 18.3211 2 18.28C3.87443 19.4903 6.05881 20.1327 8.29 20.13C9.82969 20.146 11.3571 19.855 12.7831 19.2741C14.2091 18.6931 15.505 17.8339 16.5952 16.7465C17.6854 15.6591 18.548 14.3654 19.1326 12.9409C19.7172 11.5164 20.012 9.98972 20 8.45C20 8.28 20 8.1 20 7.92C20.7847 7.33481 21.4615 6.61742 22 5.8Z"
            />
            

          </svg>
          

  
        </a>
        
        
      </li>
      
            
    </ul>
    
    
  
  </div>
  

</div>
`;
